--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "request": "^2.79.0",
     "swr": "^1.3.0"
   },
   "devDependencies": {
